--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "private": true,
   "engines": {
     "node": "v8.9.4",
-    "npm" : "5.6.0"
-  },  
+    "npm": "5.6.0"
+  },
   "dependencies": {
     "axios": "^0.18.0",
     "react": "^16.8.3",
@@ -14,6 +14,7 @@
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.5",
     "redux": "^4.0.1",
+    "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0",
     "semantic-ui-react": "^0.85.0"
   },
